# popcorn

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: authorize-pr.yml  build-popcorn.yml  check-approval.yml  test-suite.yml
popcorn/: __about__.py  __main__.py  analyzers.py  dnn.py  events.py  interfaces.py  readers.py  reporters.py  structures.py
src/popcorn/: __about__.py  __init__.py  __main__.py  analyzers.py  interfaces.py  reporters.py  structures.py
tests/functional/: test_file_output.py  test_folder_input.py
tests/unit/: common_utils.py  test_analyzers.py  test_interfaces.py  test_readers.py  test_reporters.py  test_structures.py
