[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "popcorn"
authors = [{ name = "Ethan Fleming", email = "ethan.fleming@intel.com" }]
description = "Cross-platform kernel trace analyzer"
dynamic = ["version", "readme"]
requires-python = ">=3.8"
keywords = ["kernel", "analyzer", "hotspots", "trace", "log", "tool"]
dependencies = ["openpyxl", "prettytable"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Operating System Kernels",
    "Topic :: Utilities",
]

[project.scripts]
popcorn = "popcorn.__main__:main_cli"

[project.urls]
Source = 'https://www.github.com/efleming-intel/popcorn'
Tracker = 'https://www.github.com/efleming-intel/popcorn/issues'

[tool.setuptools.dynamic]
version = { attr = "popcorn.VERSION" }
readme = { file = ["README.md"] }
