[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "popcorn"
version = "0.0.2"
authors = [{ name = "Ethan Fleming", email = "ethan.fleming@intel.com" }]
description = "cross-platform kernel trace analyzer"
dynamic = ["readme"]
requires-python = ">=3.10"
keywords = ["kernel", "analyzer", "hotspots", "trace", "log", "tool", "regression", "speed", "performance", "unitrace", "json"]
dependencies = [
    "ijson",
    "openpyxl",
    "prettytable"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Operating System Kernels",
    "Topic :: Utilities",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "hypothesis"
]

[project.scripts]
popcorn = "popcorn.__main__:main_cli"

[project.urls]
Source = 'https://www.github.com/efleming-intel/popcorn'
Tracker = 'https://www.github.com/efleming-intel/popcorn/issues'

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
